--- a/styles/media-querys.css
+++ b/styles/media-querys.css
@@ -1,1 +1,32 @@
 @charset "UTF-8";
+
+
+/* 
+@media only screen and (min-width: 992px) {
+
+}
+*/
+
+@media screen and (min-width: 768px) {
+    #img-movel1, #camps {
+        display: inline-block;
+    }
+
+    #img-movel1 {
+        width: 20%;
+    }
+
+    #camps {
+        width: 76%;
+    }
+
+    form {
+        width: 768px;
+    }
+
+
+}
+
+@media only screen and (min-width: 1200px) {
+    
+}
