--- a/styles/style.css
+++ b/styles/style.css
@@ -1,125 +1,99 @@
 @charset "UTF-8";
 
-/* Possíveis cores
-#9F84BD - Purpureus
-#480355 - Violeta Russa
-#EEB1D5 - Rosa Lavanda
-#EFC7E5 - Caldo 
-
-*/
-
 
 :root {
-    --backgroud-color: #5F2C82;
-    --backgroud-color-2: #480355;
-    --backgroud-color-gradient: linear-gradient(var(--backgroud-color), var(--backgroud-color-2));
-    --backgroud-verde: #53AAA7;
-    --backgroud-verde-desfocado: #60c6c2d4;
+    --radius: 20px;
 }
+
 
 * {
     margin: 0px;
     padding: 0px;
     border: 0px;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--backgroud-color)
+    background-color: #5F2C82;
 }
 
-form {
+
+#login {
     width: 250px;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    /* Olhar essa parte */
+    border-radius: 20px;
+    box-shadow: 0px 0px 17px #00000094;
 }
 
-#img-movel1, #img-movel2{
-    width: 100%;
+#img {
     height: 200px;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    background: black url("../images/background-form-login.jpg") no-repeat center center fixed;
+    background: url(../images/background-form-login.jpg) no-repeat fixed;
     background-size: cover;
 }
 
-#img-movel2 {
-    display: none;
-}
-
-#camps {
-    padding: 10px;
+.form {
     background-color: white;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    font: normal normal 0.9em Arial, Helvetica, sans-serif;
+    padding: 8px;
 }
 
-#camps h1 {
+.form h1 {
     text-align: center;
 }
 
-.camp {
-    background-color: var(--backgroud-color);
-    padding: 1px;
-    margin-top: 10px;
-    border-radius: 7px;
+.form p {
+    margin: 4px;
 }
 
-.camp label {
-    display: inline-block;
-    width: 15%;
+.entrada {
+    background-color: #5F2C82;
+    padding: 2px;
+    margin-bottom: 4px;
+    border-radius: 5px;
 }
 
-.camp label span {
-    transform: translate(30%, 35%);
+#iname, #ipassword {
+    width: 100%;
+    background-color: #94CFCD;
+    border-radius: 5px;
+    text-indent: 10px;
+    padding: 6px 0px;
 }
 
-.camp input {
-    display: inline-block;
-    width: 83%;
-    height: 35px;
-    margin:2px 0px;
-    text-indent: 5px;
-    border-radius: 4px;
-    background-color: var(--backgroud-verde-desfocado);
-}
-
-.camp input:focus {
+#iname:focus, #ipassword:focus {
     background-color: white;
 }
 
-.camp input, .posform {
-    font-size: 1.2em;
-}
-
-.posform {
-    display: block;
+#enviar, #esqueceu {
+    
     width: 100%;
-    margin: 5px 0px;
-    padding: 12px 0px;
+    padding: 10px;
     border-radius: 7px;
 }
 
-#submit {
-    background-color: var(--backgroud-verde);
+#enviar {
+    margin: 7px 0px;
+    background-color: #53AAA7;
     color: white;
 }
 
-#submit:hover {
+#enviar:hover {
     background-color: #2D6462;
 }
 
-#forgot {
-    background-color: transparent;
-    color: #2D6462;
-    border: 2px solid var(--backgroud-verde);
+#esqueceu {
     margin-bottom: 30px;
+    background-color: white;
+    border: 2px solid #53AAA7;
+    color: #2D6462;
 }
 
-#forgot:hover {
-    background-color: #6CD3CF;
+#esqueceu:hover {
+    background-color: #53aaa784;
 }
