--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
+body, html {
     background-color: #5F2C82;
+    width: 100vw;
+    height: 100vh;
 }
 
 
@@ -30,24 +32,26 @@ body {
     /* Olhar essa parte */
     border-radius: 20px;
     box-shadow: 0px 0px 17px #00000094;
+
+    transition: width .5s, height .5s;
 }
 
 #img {
     height: 200px;
-    background: url(../images/background-form-login.jpg) no-repeat fixed;
+    background: url(../images/background-form-login.jpg) no-repeat;
     background-size: cover;
 }
 
-.form {
+#form {
     background-color: white;
     padding: 8px;
 }
 
-.form h1 {
+#form h1 {
     text-align: center;
 }
 
-.form p {
+#form p {
     margin: 4px;
 }
 
