--- a/styles/media-querys.css
+++ b/styles/media-querys.css
@@ -30,6 +30,14 @@ TV: acima de 1200px
         float: right;
         width: 70%;
     }
+
+    #form p {
+        font-size: 1.2em;
+    }
+
+    #form h1 {
+        font-size: 2em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -43,7 +51,7 @@ TV: acima de 1200px
     }
 
     #form {
-        display: inline-block;
+        /* float: left; */
         width: 50%;
     }
     
